--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 
             <input id="searchBox" type="text">
 
+            <div class="buttons">
+
+             <input class="sBtn" type="submit" value="Google Search" >
+             <input class="sBtn" type="submit" value="I'm Feeling Lucky">
+
+             </div>
+
 
 
         </form>
