top navbar and bottom-navbar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <div class="navbar-top">
         <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="">Gmail</a></li>
+            <li><a href="">Images</a></li>
             <li><a href=""></a></li>
         </ul>
 
@@ -51,6 +51,11 @@
 
 
     <div class="navbar-bottom">
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
 
 
     </div>
