new html filled

--- a/index.html
+++ b/index.html
@@ -9,22 +9,40 @@
 </head>
 <body>
 
-    
+
     <div class="navbar1">
+        <ul id="topnav-ul">
+            <li class="topnav-li"><a href="">1</a></li>
+            <li class="topnav-li"><a href="">2</a></li>
+            <li class="topnav-li"></li>
+            <li class="topnav-li"></li>
+            
+        </ul>
 
     </div>
 
     <div id="logo">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo">
 
     </div>
 
     <div class="big1">
 
         <div id="searchbox">
+            <span><img src="" alt="search-icon"></span>
+            <form action="">
+                <input type="text">
+            </form>
 
         </div>
 
         <div class="buttons">
+            <a class="btn-a" href="">
+                <input class="btn-inp" type="submit" value="Google Search">
+            </a>
+            <a class="btn-a" href="">
+                <input class="btn-inp" type="submit" value="I'm Feeling Lucky">
+            </a>
 
         </div>
 
@@ -33,9 +51,21 @@
     <div class="navbar2">
 
         <div class="L-block">
+            <ul class="Lb-ul">
+                <li class="Lb-li"><a class="Lb-a" href=""></a></li>
+                <li class="Lb-li"><a class="Lb-a" href=""></a></li>
+                <li class="Lb-li"><a class="Lb-a" href=""></a></li>
+                <li class="Lb-li"><a class="Lb-a" href=""></a></li>
+                <li class="Lb-li"><a class="Lb-a" href=""></a></li>
+            </ul>
 
         </div>
         <div class="R-block">
+            <ul class="Rb-ul">
+                <li class="Rb-li"><a class="Rb-a" href=""></a></li>
+                <li class="Rb-li"><a class="Rb-a" href=""></a></li>
+                <li class="Rb-li"><a class="Rb-a" href=""></a></li>
+            </ul>
 
         </div>
 
