--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div class="navbar1">
         <ul id="topnav-ul">
-            <li class="topnav-li"><a href="">1</a></li>
-            <li class="topnav-li"><a href="">2</a></li>
+            <li class="topnav-li"><a class="top-a" href="">1</a></li>
+            <li class="topnav-li"><a class="top-a" href="">2</a></li>
             <li class="topnav-li"></li>
             <li class="topnav-li"></li>
             
