--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="big1">
 
         <div class="s-icon">
-            <img src="" alt="s-icon">
+            <img id="icon" src="/search.svg" alt="s-icon">
         </div>
 
         <div id="searchbox">
