--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div class="navbar1">
         <ul id="topnav-ul">
-            <li class="topnav-li"><a class="top-a" href="">1</a></li>
-            <li class="topnav-li"><a class="top-a" href="">2</a></li>
+            <li class="topnav-li"><a class="top-a" href="">Gmail</a></li>
+            <li class="topnav-li"><a class="top-a" href="">Images</a></li>
             <li class="topnav-li"></li>
             <li class="topnav-li"></li>
             
@@ -58,19 +58,18 @@
 
         <div class="L-block">
             <ul class="Lb-ul">
-                <li class="Lb-li"><a class="Lb-a" href=""></a></li>
-                <li class="Lb-li"><a class="Lb-a" href=""></a></li>
-                <li class="Lb-li"><a class="Lb-a" href=""></a></li>
-                <li class="Lb-li"><a class="Lb-a" href=""></a></li>
-                <li class="Lb-li"><a class="Lb-a" href=""></a></li>
+                <li class="Lb-li"><a class="Lb-a" href="">Advertising</a></li>
+                <li class="Lb-li"><a class="Lb-a" href="">Business</a></li>
+                <li class="Lb-li"><a class="Lb-a" href="">About</a></li>
+                <li class="Lb-li"><a class="Lb-a" href="">How Search Works</a></li>
             </ul>
 
         </div>
         <div class="R-block">
             <ul class="Rb-ul">
-                <li class="Rb-li"><a class="Rb-a" href=""></a></li>
-                <li class="Rb-li"><a class="Rb-a" href=""></a></li>
-                <li class="Rb-li"><a class="Rb-a" href=""></a></li>
+                <li class="Rb-li"><a class="Rb-a" href="">Privacy</a></li>
+                <li class="Rb-li"><a class="Rb-a" href="">Terms</a></li>
+                <li class="Rb-li"><a class="Rb-a" href="">Setings</a></li>
             </ul>
 
         </div>
